--- a/jarvis/dashboard/UI/css/style.css
+++ b/jarvis/dashboard/UI/css/style.css
@@ -3,7 +3,7 @@ body{
     margin: 0px;
     font-family: 'Roboto', sans-serif;
 
-    background-image: url("../bg.jpg");
+    background-image: url("../photos//00.jpg");
    
     background-size: cover;  
     background-repeat: no-repeat;
