--- a/jarvis/dashboard/UI/css/style.css
+++ b/jarvis/dashboard/UI/css/style.css
@@ -12,6 +12,27 @@ body{
 *{
     box-sizing: border-box;
 }
+
+@font-face {
+    font-family: 'MeteoconsRegular';
+    src: url('../fonts/meteo/meteocons-webfont.eot');
+    src: url('../fonts/meteo/meteocons-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/meteo/meteocons-webfont.woff') format('woff'),
+         url('../fonts/meteo/meteocons-webfont.ttf') format('truetype'),
+         url('../fonts/meteo/meteocons-webfont.svg#MeteoconsRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+[data-icon]:before {
+	font-family: 'MeteoconsRegular';
+	content: attr(data-icon);
+}
+
+
+
 .main{
     margin: 10px;
     margin-top: 15px;
